pkgs/racket-pkgs/racket-test/tests/typed-racket/fail/cast-top-level1.rkt
#;
(exn-pred exn:fail:syntax? #rx".*could not be converted.*")

#lang racket/load

(require typed/racket)

(cast 2 (All (a) (Ephemeronof a)))
